Remove footer, fix alert alignments

--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -84,7 +84,7 @@
   opacity: 1;
   background-color: rgb(31, 31, 31);
   color: #b3c1b7;
-  height: 100vh;
+  height: 100vh; 
 }
 
 .input-container {
@@ -117,11 +117,13 @@ input::placeholder {
   color: #1a0f09;
 }
 
-/* .alert {
+.alert {
   font-size: small;
-  left: 10%;
-  top: 40%;
-} */
+  left: 28%;
+  top: 24%;
+  position: fixed;
+  color:rgb(197, 162, 137);
+}
 
 
 .btn--action {
@@ -151,7 +153,7 @@ input::placeholder {
 }
 
 .btn--action:hover span {
-  padding-left: 1.1rem;
+  padding-left: 1.3rem;
 }
 
 .btn--action span::before {
@@ -207,7 +209,7 @@ input::placeholder {
 .temp-section {
   background-color: #0c121f;
   color: rgb(163, 151, 151);
-  height: 80vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -279,7 +281,7 @@ input::placeholder {
 .artist-btn {
   display: block;
   width: auto;
-  padding: 2rem;
+  padding: 1.5rem;
   border-radius: 1.5rem;
   background-color: #8d7c99;
   color: #000;
@@ -298,7 +300,7 @@ input::placeholder {
 .artist-btn-0 {
   display: block;
   width: auto;
-  padding: 2rem;
+  padding: 1.5rem;
   border-radius: 1.5rem;
   background-color: #8d7c99;
   color: #000;
